--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -1,50 +1,69 @@
-<div class="example-container mat-elevation-z8">
-  <mat-drawer-container class="drawer-container">
-    <mat-drawer mode="side" opened class="left-drawer">
-      <div class="users-pane">
-        <mat-card class="users-card">
-          <button type="button" mat-button matSuffix mat-icon-button aria-label="Exit" (click)="exitChat()">
-            <mat-icon>logout</mat-icon>
-          </button>
-        </mat-card>
-        <mat-card class="users-card" *ngFor="let user of users">
-          <mat-icon>person</mat-icon> <span class="username">{{user.nickname}}</span>
-        </mat-card>
-      </div>
-    </mat-drawer>
-    <mat-drawer-content class="chat-pane">
-      <div #chatcontent [scrollTop]="scrolltop" class="chat-content">
-        <div class="message-box" *ngFor="let chat of chats">
-          <div class="chat-status" text-center *ngIf="chat.type==='join'||chat.type==='exit';else message">
-            <span class="chat-date">{{chat.date | date:'yyyy/MM/dd HH:mm:ss'}}&nbsp;</span>
-            <span class="chat-content-center">{{chat.message}}</span>
-          </div>
-          <ng-template #message>
-            <div class="chat-message">
-              <div class="right-bubble" [ngClass]="{'right-bubble': chat.nickname === nickname, 'left-bubble': chat.nickname !== nickname}">
-                <span class="msg-name" *ngIf="chat.nickname === nickname">Me</span>
-                <span class="msg-name" *ngIf="chat.nickname !== nickname">{{chat.nickname}}</span>
-                <span class="msg-date"> at {{chat.date | date:'yyyy/MM/dd HH:mm:ss'}}</span>
-                <p text-wrap>{{chat.message}}</p>
-              </div>
-            </div>
-          </ng-template>
+<div class="button">
+  <button type="button" mat-button matSuffix mat-icon-button aria-label="Exit" (click)="exitChat()">
+    <mat-icon>logout</mat-icon>
+  </button>
+  <button type="button" (click)="clearData()" class="btn-danger">Clear Chat</button>
+</div>
+<div class="card rare-wind-gradient chat-room">
+  <div class="card-body">
+
+    <!-- Grid row -->
+    <div class="row px-lg-2 px-2">
+      <!-- Grid column -->
+      <div class="col-md-12 col-xl-12 pl-md-12 px-lg-auto px-0">
+
+        <div class="chat-message">
+
+          <ul class="list-unstyled chat-1 scrollbar-light-blue">
+            <li class="d-flex justify-content-between mb-4" *ngFor="let chat of chats">
+              <ng-container *ngIf="chat.type!=='join'&&chat.type!=='exit'&&chat.nickname === nickname">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" alt="avatar" class="avatar rounded-circle mr-2 ml-lg-3 ml-0 z-depth-1">
+                <div class="chat-body white p-3 ml-2 z-depth-1">
+                  <div class="header">
+                    <strong class="primary-font">{{chat.nickname}}</strong>
+                    <small class="pull-right text-muted"><i class="far fa-clock"></i> {{chat.date | date:'yyyy/MM/dd HH:mm:ss'}}</small>
+                  </div>
+                  <hr>
+                  <p class="mb-0">{{chat.message}}</p>
+                </div>
+              </ng-container>
+              <ng-container *ngIf="chat.type!=='join'&&chat.type!=='exit'&&chat.nickname !== nickname">
+                <div class="chat-body white p-3 z-depth-1 bodyright">
+                  <div class="header">
+                    <strong class="primary-font">{{chat.nickname}}</strong>
+                    <small class="pull-right text-muted"><i class="far fa-clock"></i> {{chat.date | date:'yyyy/MM/dd HH:mm:ss'}}</small>
+                  </div>
+                  <hr class="w-100">
+                  <p class="mb-0">
+                    {{chat.message}}
+                  </p>
+                </div>
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-3.jpg" alt="avatar" class="avatar rounded-circle mr-0 ml-3 z-depth-1">
+              </ng-container>
+            </li>
+          </ul>
+          <footer class="sticky-footer">
+            <form class="message-form" [formGroup]="chatForm" (ngSubmit)="onFormSubmit(chatForm.value)">
+              <mat-form-field class="message-form-field">
+                <input matInput placeholder="Enter message here" formControlName="message"
+                        [errorStateMatcher]="matcher">
+                <mat-error>
+                  <span *ngIf="!chatForm.get('message').valid && chatForm.get('message').touched">Enter your message</span>
+                </mat-error>
+                <button type="submit" [disabled]="!chatForm.valid" mat-button matSuffix mat-icon-button aria-label="Send">
+                  <mat-icon>send</mat-icon>
+                </button>
+              </mat-form-field>
+            </form>
+          </footer>
+
         </div>
+
       </div>
-      <footer class="sticky-footer">
-        <form class="message-form" [formGroup]="chatForm" (ngSubmit)="onFormSubmit(chatForm.value)">
-          <mat-form-field class="message-form-field">
-            <input matInput placeholder="Enter message here" formControlName="message"
-                    [errorStateMatcher]="matcher">
-            <mat-error>
-              <span *ngIf="!chatForm.get('message').valid && chatForm.get('message').touched">Enter your message</span>
-            </mat-error>
-            <button type="submit" [disabled]="!chatForm.valid" mat-button matSuffix mat-icon-button aria-label="Send">
-              <mat-icon>send</mat-icon>
-            </button>
-          </mat-form-field>
-        </form>
-      </footer>
-    </mat-drawer-content>
-  </mat-drawer-container>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
 </div>
